# Area51

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile_  README.md  cmake_install.cmake  index.html  main  main.cpp  main.hpp  params.json  test  test.cpp  test1.cpp  test2.cpp  test3.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml
include/: Human.hpp
src/: Human.cpp
