cmake_minimum_required(VERSION 2.8)
project(Area51)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
find_package(Boost COMPONENTS unit_test_framework REQUIRED)
add_executable(area51 main.cpp src/Human.cpp)
enable_testing()
add_executable(area51_tests test.cpp src/Human.cpp)
add_executable(test1 test1.cpp src/Human.cpp)
add_executable(test2 test2.cpp src/Human.cpp)
add_executable(test3 test3.cpp src/Human.cpp)
target_link_libraries(test1 ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_link_libraries(test2 ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
target_link_libraries(test3 ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
add_test(Tester area51_tests)
add_test(Test1 test1)
add_test(Test2 test2)
add_test(Test3 test3)
install(FILES ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/area51 ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/area51_tests TYPE BIN PERMISSIONS WORLD_EXECUTE)
